--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/index.css">
-    <link rel="shortcut icon" href="/favIcon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="shortcut icon" href="/Images/favIcon.png" type="image/x-icon">
     <title>WeatherGo - Live Forcasting & Updates</title>
   </head>
   <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent my-0">
-            <a class="navbar-brand" href="/index.html"><img class="bi me-2" width="60" height="55" src="/favIcon.png" alt=""> <b class="logoText">WeatherGo</b></a>
+            <a class="navbar-brand" href="/index.html"><img class="bi me-2" width="60" height="55" src="/Images/favIcon.png" alt=""> <b class="logoText">WeatherGo</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -101,7 +101,7 @@
         <p class="col-md-4 mb-0 text-body-secondary extra0">© 2023 Company, Inc</p>
     
         <a href="/index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <img class="bi me-2" width="50" height="45" src="/favIcon.png" alt="">
+          <img class="bi me-2" width="50" height="45" src="Images/favIcon.png" alt="">
         </a>
     
         <ul class="nav col-md-4 justify-content-end">
@@ -116,7 +116,7 @@
   </body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/index.js"></script>
+    <script src="/Js/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
