--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                   <h4 class="my-0 fw-normal">Temperature</h4>
                 </div>
                 <div class="card-body">
-                  <h1 class="card-title pricing-card-title"><span id="temp"></span><small class="text-body-secondary fw-light"> &deg;C</small></h1>
+                  <h1 class="card-title pricing-card-title"><span id="temp"></span><bigger class="text-body-secondary fw-light"> &deg;C</bigger></h1>
                   <ul class="list-unstyled mt-3 mb-4 ulFont">
-                    <li>Min Temp : <span id="min_temp"></span></li>
-                    <li>Max Temp : <span id="max_temp"></span></li>
+                    <li>Min Temp : <span id="min_temp"></span> &deg;C</li>
+                    <li>Max Temp : <span id="max_temp"></span> &deg;C</li>
                     <li>Sunrise : <span id="sunrise"></span></li>
                     <li>Sunset : <span id="sunset"></span></li>
                   </ul>
@@ -61,9 +61,9 @@
                   <h4 class="my-0 fw-normal">Humidity</h4>
                 </div>
                 <div class="card-body">
-                  <h1 class="card-title pricing-card-title"><span id="humidity1"></span><small class="text-body-secondary fw-light"> %</small></h1>
+                  <h1 class="card-title pricing-card-title"><span id="humidity1"></span><bigger class="text-body-secondary fw-light"> %</bigger></h1>
                   <ul class="list-unstyled mt-3 mb-4 ulFont">
-                    <li>Humidity : <span id="humidity"></span></li>
+                    <li>Humidity : <span id="humidity"></span> %</li>
                     <li>Wind Degrees : <span id="wind_degrees1"></span></li>
                     <li>Feels Like : <span id="feels_like"></span></li>
                     <li>Cloud PCT : <span id="cloud_pct"></span></li>
@@ -78,9 +78,9 @@
                   <h4 class="my-0 fw-normal">Wind Speed</h4>
                 </div>
                 <div class="card-body">
-                  <h1 class="card-title pricing-card-title"><span id="wind_speed1"></span><small class="text-body-secondary fw-light"> m/s</small></h1>
+                  <h1 class="card-title pricing-card-title"><span id="wind_speed1"></span><bigger class="text-body-secondary fw-light"> m/s</bigger></h1>
                   <ul class="list-unstyled mt-3 mb-4 ulFont">
-                    <li>Wind Speed : <span id="wind_speed"></span></li>
+                    <li>Wind Speed : <span id="wind_speed"></span> m/s</li>
                     <li>Wind Degrees : <span id="wind_degrees"></span></li>
                     <li>Feels Like : <span id="feels_like1"></span></li>
                     <li>Cloud PCT : <span id="cloud_pct1"></span></li>
