Guide page update

--- a/guide.html
+++ b/guide.html
@@ -7,7 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="/CSS/guide.css">
     <link rel="shortcut icon" href="/Images/favIcon.png" type="image/x-icon">
     <title>WeatherGo - Live Forcasting & Updates</title>
   </head>
@@ -17,6 +18,27 @@
             <a class="navbar-brand" href="/index.html"><img class="bi me-2" width="60" height="55" src="/Images/favIcon.png" alt=""> <b class="logoText">WeatherGo</b></a>
         </nav>
     </header>
+    
+    <div class="container">
+      <main class="px-3 p-3 pb-md-4 mx-auto text-center">
+        <h1 class="mb-5">Welcome To WeatherGo !!</h1>
+        <div class="gBox">
+          <div class="guideBox"> 
+            <p class="lead">Follow The Below Steps :</p>
+            <p class="lead">Step 1 : Come To Our Site For Weather Updates.</p>
+            <p class="lead">Step 2 : Click On The Search Bar On Top Of The Site.</p>
+            <p class="lead">Step 3 : Then Type Your City Name In The Serach Bar.</p>
+            <p class="lead">Step 4 : Just After Click On The Green Search Button.</p>
+            <p class="lead">Step 5 : Finally You Get The Current Weather Condition Of Your City.</p>
+            <br>
+          </div>
+          <p class="lead pT">Thanks For Using <b>"WeatherGo"</b></p>
+        </div>
+          <p class="lead mt-5">
+            <a href="/index.html" class="hBton">Click Here For Weather Page</a>
+          </p>
+      </main>
+    </div>
 
   </body>
     <!-- Optional JavaScript -->
