--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section>
       <div class="container">      
-      <div class="container py-0-">
+      <div class="container py-0">
           <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
             <h1 class="display-4 fw-normal text-body-emphasis extra0">WeatherGo - Weather For <SPan id="cityName"></SPan></h1>
             <p class="fs-5 text-body-secondary extra0">WeatherGo Is Your Online Weather Condition Partner, Which Provides You The RealTime Data To You About Current Weather Conditon In Your Area/Sector. For More Details <a class="mdet" href="/guide.html">Click Here</a></p>
